# config-tools

./: .gitignore  .travis.yml  Makefile  README.rst  add_computes.sh  config.cpp  config.tmpl  configure.sh  download.sh  edeploy-nodes.sh  extract-archive.sh  extract.py  extract_puppet_info.py  functions  generate.py  generate_environment_password.sh  health-check.sh  inception.sh  merge.py  prep_virtual_env.sh  provision.sh  send.sh  sexp.py  test_extract.py  test_extract_puppet_info.py  test_generate.py  test_merge.py  test_sexp.py  upgrade.sh  verify-servers.sh  verify-steps.sh  virtualize.sh
tempest/: clean-tempest.sh  configure-tempest.sh  javelin-with-external-network.yaml  javelin-without-external-network.yaml  nose_exclude_spinal-stack_icehouse  nose_exclude_spinal-stack_juno  run-tempest.sh
tempest/lib/: functions  glance  javelin  keystone  (+2 more)
virtualization/: README.md  collector.py  requirements.txt  setup.cfg  setup.py  test-requirements.txt  tox.ini  virt_platform.yml.sample  virtualizor.py
virtualization/autobuilder/: prepare_build_dir.sh
virtualization/tests/: test_collector.py  test_virtualizor.py
virtualization/tests/data/config-tools/: global.yml
virtualization/tests/data/edeploy/: hw1.cmdb  hw1.specs  state
virtualization/tests/datas/etc/config-tools/: config  global.yml
virtualization/tests/datas/etc/edeploy/: hosts.conf  hp-DL360p-ceph-ssd.configure  hp-DL360p-ceph-ssd.specs  hp-DL360p-ceph.configure  hp-DL360p-ceph.specs  state  virt-node.cmdb  virt-node.configure  virt-node.specs  virt-serv.cmdb  virt-serv.configure  virt-serv.specs
