[metadata]
name = virtualization
summary = Tools to deploy a virtual Spinal Stack infrastructure
description-file = README.md
version = 0.0.1
license = Apache License (2.0)
classifiers =
    Programming Language :: Python :: 2
    Programming Language :: Python :: 3
    Programming Language :: Python
    Development Status :: 5 - Production/Stable
    Environment :: Console
    Intended Audience :: Information Technology
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
author = eNovance Boa team
author-email = boa@enovance.com

